# capital-build-reconciler

./: .gitignore  AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
capital_build_reconciler/: __init__.py  cli.py  model.py  scoring.py
config/: pillars.yaml
decisions/: DEC-CBR-000-helicone-as-v0-source.md
docs/: first-pr.md
reports/: 2026-M06-ingest-summary.jsonl  2026-M06.fixture.parquet
schemas/: monthly_memo.schema.json  normalized_event.schema.json
scripts/: validate_pillars.py  validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/capital_reconcile/: cli.py  show.py
src/capital_reconcile/ingest/: helicone.py
tests/: test_cli_errors.py  test_ingest_helicone.py  test_scoring.py  test_show.py
tests/fixtures/: helicone_sample.json
